<resources>
    <string name="app_name">SithAndroid</string>
    <string name="service_fetch_data_error">Unable to fetch data</string>
    <string name="player_not_found">Unable to find player</string>
    <string name="sith_card_not_found">Unable to find sith card</string>
    <string name="played_game_not_found">Unable to find played game</string>
    <string name="player_name">Nickname: </string>
    <string name="player_number">Phone number: </string>
    <string name="select_players">Add players to your game</string>
    <string name="kill_players">Kill players</string>
    <string name="show_players">Show players</string>
    <string name="select_players_kill">Select players to kill!</string>
    <string name="roles_players">Cards shuffled! Check your roles!</string>
    <string name="pair_select_players">Bind two players</string>
    <string name="single_select_player">Choose a player..</string>
    <string name="title_day_time">It\'s day Time! You\'re safe, for now…</string>
    <string name="player_limit_error">Add more than 5 players please!</string>
    <string name="label_warning">Warning!</string>
    <string name="game_quit_warning">Are you sure you want to Quit the game?</string>
    <string name="maz_kanata_choose_card">Choose a player to reveal the card</string>
    <string name="han_solo_choose_card">Choose a new card.</string>
    <string name="boba_fett_use_med_pack">Use your med pack on this player?</string>
    <string name="boba_fett_use_rocket_launcher">Use your rocket launcher?</string>
    <string name="user_killed">Sorry, You are killed!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_over">Game over</string>
    <string name="killed_players_night">Killed players last night/day:</string>
    <string name="killed_players">Killed players:</string>
    <string name="alive_players">Alive players:</string>
    <string name="players">Players</string>
    <string name="server_started">Server started</string>
    <string name="drawer_open">Open servers</string>
    <string name="drawer_close">Close servers</string>
    <string name="error_title">The force is not with you..</string>
    <string name="loading">Loading…</string>
    <string name="client_identify">Who are you?</string>
    <string name="your_role">This is your role %1s!</string>
    <string name="your_new_role">This is your new role %1s!</string>
    <string name="r2d2_select_players">Select 3 players</string>
    <string name="creation_server_group_failed">Creation Server failed due to mysterious reasons (During creation group)..</string>
    <string name="creation_server_group_owner_failed">Creation Server failed because you are not the group owner :(</string>
    <string name="creation_server_service_failed">Creation Server failed due to mysterious reasons (During creation service)..</string>
    <string name="server_failed">The server failed and got stopped. Start the server again to re-host</string>
    <string name="server_failed_p2p">The server stopped, because p2p got disabled</string>
    <string name="server_failed_p2p_not_supported">P2p is not supported on this device</string>
    <string name="service_discovery_failed">Unable to discover Sith Services</string>
    <string name="discovering_services">Discovering Sith Services</string>
    <string name="p2p_disabled_feature">Enable P2P to use this feature</string>
    <string name="server_list_title">Join remote Games</string>
    <string name="connection_to_server_failed">Connection to server failed</string>
    <string name="server_disconnected">You are disconnected from the server</string>
    <string name="music_title">Music</string>
    <string name="game_settings">Game Settings</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="description_title">Sith for Android</string>
    <string name="description_summary">Werewolves variant set in Star Wars universe made by Grieten en Knapen</string>
    <string name="music_summary_on">Music in-game enabled</string>
    <string name="music_summary_off">Music in-game disabled</string>
    <string name="sms_title">SMS</string>
    <string name="sms_summary_on">SMS send function (Roles, BB8) enabled</string>
    <string name="sms_summary_off">SMS send function (Roles, BB8) disabled</string>
    <string name="vibrate_notification_title">Vibrate notification</string>
    <string name="vibrate_notification_on">Vibrate notification enabled</string>
    <string name="vibrate_notification_off">Vibrate notification disabled</string>
    <string name="battery_saving_mode_title">Battery saving</string>
    <string name="battery_saving_mode_on">App will reduce the graphical effects to make the battery last longer</string>
    <string name="battery_saving_mode_off">App will show full effects. This might drain the battery faster</string>
    <string name="random_comments_title">Random comments</string>
    <string name="random_comments_mode_on">App play random funny comments during the game play</string>
    <string name="random_comments_mode_off">App won\'t play random comments during the game</string>
    <string name="team_sith">Sith</string>
    <string name="team_galen_erso">Galen Erso</string>
    <string name="team_jedi">Jedi</string>
    <string name="team_lovers">Lovers</string>
    <string name="team_sith_winning_text">The <b>Sith</b> have won the game!</string>
    <string name="team_jedi_winning_text">The <b>Jedi</b> have won the game!</string>
    <string name="team_lovers_winning_text">The <b>Lovers</b> have won the game!</string>
    <string name="team_galen_erso_winning_text"><b>Galen Erso</b> has won the game!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_start_game">Start Game</string>
    <string name="menu_resume_game">Resume Game</string>
    <string name="menu_players">Players</string>
    <string name="basis1_intro">A long time ago, in a galaxy far far away… ging iedereen slapen. iedereen doet nu zijn ogen dicht.</string>
    <string name="basis2_han_solo_wordt_wakker">Han Solo wordt nu wakker, hij mag uit de overgebleven rollen een nieuwe rol kiezen.</string>
    <string name="basis3_han_solo_mag_terug_gaan_slapen">Han Solo mag terug gaan slapen.</string>
    <string name="basis4_BB8wordtwakker">BB8 wordt nu wakker, hij mag twee mensen in de echt verbinden.</string>
    <string name="basis5_2_bb8_geliefden_kijken_elkaar_liefdevol_in_de_ogen">De geliefden kijken elkaar liefdevol in de ogen.</string>
    <string name="basis5_1_bb8_mag_terug_gaan_slapen">BB8 mag terug gaan slapen.</string>
    <string name="basis6_de_geliefden_mogen_terug_gaan_slapen">De geliefden mogen terug gaan slapen.</string>
    <string name="basis7_maz_kanata_wordt_wakker">Maz Kanata wordt nu wakker, zij mag van één iemand de rol kiezen en die dan bekijken.</string>
    <string name="basis8_maz_kanata_mag_terug_gaan_slapen">Maz Kanata mag terug gaan slapen.</string>
    <string name="basis9_sith_worden_wakker">Nu worden de Sith wakker, zij mogen hun slachtoffer voor deze avond uitkiezen.</string>
    <string name="basis10_sith_mogen_terug_gaan_slapen">De Sith mogen terug gaan slapen.</string>
    <string name="basis11_boba_fett_wordt_wakker">Boba Fett ontwaakt uit zijn slaap, hij krijgt het slachtoffer van deze nacht te zien. Gebruikt hij zijn med pack?</string>
    <string name="basis12_boba_fett_rocketlauncher">Gebruikt hij zijn rocket launcher?</string>
    <string name="basis13_boba_fett_gaat_terug_slapen">Boba Fett gaat terug slapen en de Jedi council ontwaakt.</string>
    <string name="basis14_kylo_ren_ontwaakt">Kylo Ren ontwaakt deze nacht, hij heeft definitief voor de Dark Side gekozen en speelt nu dus mee met de Sith.</string>
    <string name="basis15_r2d2_ontwaakt">R2D2 wordt nu wakker, hij mag de rollen van drie personen omwisselen.</string>
    <string name="basis15_r2d2_mag_terug_gaan_slapen">R2D2 mag terug gaan slapen.</string>
    <string name="bb8_description">BB8 brings people together and makes them fall in love. You wake up the first night and bind two players that will love each other for eternity.</string>
    <string name="boba_fett_description">Boba Fett is a very skilled bounty hunter. You wake up at the end of every round and decide who gets to live and who gets to die. Use your med pack and rocket launcher sparingly, you can only use them once.</string>
    <string name="chewbacca_description">Who dares to face Chewbacca! When you get killed during the day, you can kill someone else to your liking.</string>
    <string name="sith_description">You are a Sith that wakes up every night to kill an innocent player. The sith win when they are the only ones left in the game.</string>
    <string name="jedi_description">You are a Jedi that has to face the Sith. Be sure to kill all off the sith players during the day and you win the game.</string>
    <string name="general_grievous_description">General grievous works together with the sith, but is not a force user. You wake up during the night to kill an innocent player.</string>
    <string name="finn_description">Finn is always there to get a glimpse of what\u0027s happening. You can peep trough your fingers during the night, but don\u0027t let the sith see you!</string>
    <string name="han_solo_description">Han Solo, the smuggler, wakes up the first night to choose another role. You can choose any role that has not been taken yet.</string>
    <string name="kylo_ren_description">Kylo Ren will play together with the jedi before the first 3 nights, but will turn a sith the 3th night.</string>
    <string name="maz_kanata_description">Maz kanata sees everything. Every round you can look at the card of a player of your choosing.</string>
    <string name="no_description">This is the description of your role. It\'s not implemented yet, so stop crying!</string>
    <string name="behalve">Behalve</string>
    <string name="linked_by_BB8">Verbonden door BB8!</string>
    <string name="bb8">BB8</string>
    <string name="boba_fett">Boba Fett</string>
    <string name="chewbacca">Chewbacca</string>
    <string name="darth_maul">Darth Maul</string>
    <string name="darth_vader">Darth Vader</string>
    <string name="general_grievous">General Grievous</string>
    <string name="finn">Finn</string>
    <string name="han_solo">Han Solo</string>
    <string name="kylo_ren">Kylo Ren</string>
    <string name="luke_skywalker">Luke Skywalker</string>
    <string name="maz_kanata">Maz Kanata</string>
    <string name="obi_wan_kenobi">Obi-Wan Kenobi</string>
    <string name="rey">Rey</string>
    <string name="the_emperor">The Emperor</string>
    <string name="yoda">Yoda</string>
    <string name="random_comment_17">Gaat ge straks mee wandelen Babs?</string>
    <string name="random_comment_16">Ge doet dat goed, Matthias.</string>
    <string name="random_comment_15">Gerry stop met lassen.</string>
    <string name="random_comment_14">Ge waart beter als verteller Matthias.</string>
    <string name="random_comment_13">Klopt dat Wouter?</string>
    <string name="random_comment_12">Lukt het nog Gerry?</string>
    <string name="random_comment_11">Nee Wouter, ge moogt niet altijd Darth Vader zijn.</string>
    <string name="random_comment_10">Niet slapen Pieter.</string>
    <string name="random_comment_9">Nog ne Duvel Tristan?</string>
    <string name="random_comment_8">Pieter nog honger?</string>
    <string name="random_comment_7">Pieter stop met eten.</string>
    <string name="random_comment_6">Timo blijft daar van af.</string>
    <string name="random_comment_5">Timo en Gerry, stop met discussiëren.</string>
    <string name="random_comment_4">Tristan, dat is uw rol niet.</string>
    <string name="random_comment_3">Tristan het is aan u.</string>
    <string name="random_comment_2">Wanneer gaat ge pannenkoeken bakken Matthias?</string>
</resources>