<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.grietenenknapen.sithandroid.ui.views.starview.StarView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_default"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <TextView
                android:id="@+id/menuStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/menu_start_game"
                android:layout_marginBottom="@dimen/margin_small"
                android:textAppearance="@style/TextAppearance.Big"
                android:textColor="@color/color_yellow_selector" />

            <TextView
                android:id="@+id/menuResume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/menu_resume_game"
                android:layout_marginTop="@dimen/margin_small"
                android:textAppearance="@style/TextAppearance.Big"
                android:textColor="@color/color_yellow_selector"
                android:visibility="gone" />
        </LinearLayout>


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom|right"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_colorPressed="@color/colorPrimaryDark"
            fab:menu_colorRipple="@color/colorPrimaryDark"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/ic_menu_fab"
            tools:ignore="RtlHardcoded">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menuPlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person"
                fab:fab_colorNormal="@color/lightBlue"
                fab:fab_colorPressed="@color/blue"
                fab:fab_colorRipple="@color/blue"
                fab:fab_label="@string/menu_players"
                fab:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>


    </RelativeLayout>

</RelativeLayout>